		Added SetFlashInterval
		Added PauseHighlighting
		Added Checkinit(id) to all methods which have an id passed in
		Added EmptyList
		Added RemovePartFromList
		Increment version in KSPAssembly

	KSP_Log
		Added new instantator to KSP_Log to set the level when initializing
		Set default logging level to ERROR
		Removed unnecessary logging line in SetLevel
		Added Debug method, pointing to Detail
		Removed conditional attributions
		Created example logging code
		Created README with sample usage
		Increment version in KSPAssembly

0.0.3.4
	Fixed URL in ButtonManager.version file 

0.0.3.5
	Added additional Log.Exception with extra parameter
	Fixed loglevel check 

0.0.3.6
	KSP_PartHighlighter
		Added method to check if a part is already in the list

0.0.3.7
	KSP_PartHighlighter
		Thanks to forum user @sibiro for pointing this out:
			Made highlightCnt a static to match the hPartsLists

0.0.3.8
	KSP_PartHighlighter
		Changed check for part in list from entire part to persistentId

0.0.3.9
	KSP_Log
		Added		  public void Error(Exception)
		Added         public  void Info(object messageOrFormat, params object[] args)
		Added         public  void Error(object messageOrFormat, params object[] args)
		Added         public  void Warn(object messageOrFormat, params object[] args)
	SpaceTuxUtility
		Added KSPAssembly to AssemblyInfo.cs

0.0.3.10
	KSP_PartHighlighter
		Removed some log spam from KSP_PartHighlighter

0.0.3.11
	KSP_Log
		Changed static def of loglevel to nonstatic

0.0.4
	KSP_Log 0.1.1.1
		Updated KSP_Log to write logging info to files in Logs/SpaceTux/*
	PartHighlighter 0.1.0.8
		Removed log spam
	VesselModuleSave 0.0.1.1
		Removed log spam

0.0.4.1
	KSP_Log 0.1.1.2
		Improved code to make sure directory path is there

0.0.5
	Utilities 0.0.2
		Added SafeLoad library for ConfigNodes
	KSP_Log 0.1.1.3
		Fixed fatal error in KSP_Log, was missing a static

0.0.5.1
	KSP_Log 0.1.1.4
		Fixed invalid initialization of vars